Update: Production URLs for Vercel frontend and Render backend

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # Frontend Environment Variables
 
 # Backend API URL
-VITE_API_BASE_URL=http://localhost:5000/api
+VITE_API_BASE_URL=https://airtable-form-builder-backend-wcsh.onrender.com/api
 
 # Airtable OAuth (for frontend redirects)
-VITE_AIRTABLE_CLIENT_ID=your_airtable_client_id_here
-VITE_OAUTH_REDIRECT_URI=http://localhost:5173/callback
+VITE_AIRTABLE_CLIENT_ID=a6d1c60b-eb04-4725-a628-4bfd600729d6
+VITE_OAUTH_REDIRECT_URI=https://airtable-form-builder-delta.vercel.app/callback
 
 # For Production (Vercel/Netlify)
 # VITE_API_BASE_URL=https://your-backend.onrender.com/api
